--- a/starbucks/style.css
+++ b/starbucks/style.css
@@ -246,53 +246,174 @@ section:nth-child(3) {background-color: #1e3932;
                                 border: 2px solid #00704a;
                                 }
 
-.reward_inner .txtBox .topBox .btn li:nth-child(2) a {background-color: transparent;
-                                                    border-color:  #ffff;}
-
-
-.reward_inner .txtBox .bottomBox {display: flex;
-justify-content: space-between;
-padding-top:15px ;}
-
-.reward_inner .txtBox .bottomBox .text {width: 70%;}
-
-.reward_inner .txtBox .bottomBox .btn {width: 30%;}
-
-.reward_inner .txtBox .bottomBox .btn ul {display: flex;
-                                        justify-content: flex-end;
-                                        align-items: center;}
-
- .reward_inner .txtBox .bottomBox .btn li {}
- .reward_inner .txtBox .bottomBox .btn a {display: flex;
- 
-    color: #fff;
-font-size: 14px;
-height: 38px;
-justify-content: center;
-align-items: center;
-padding: 0 3px;
-border-radius: 4px;
-border: 2px solid #fff ;
-letter-spacing:-1px;
+.reward_inner .txtBox .topBox .btn li:nth-child(2) a {
+    background-color: transparent;
+    border-color:  #ffff;
 }
 
+
+.reward_inner .txtBox .bottomBox {
+    display: flex;
+    justify-content: space-between;
+    padding-top:15px;
+}
+
+.reward_inner .txtBox .bottomBox .text {
+    width: 70%;
+}
+
+.reward_inner .txtBox .bottomBox .btn {
+    width: 30%;
+}
+
+.reward_inner .txtBox .bottomBox .btn ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+ .reward_inner .txtBox .bottomBox .btn li {}
+ .reward_inner .txtBox .bottomBox .btn a {
+    display: flex;
+    color: #fff;
+    font-size: 14px;
+    height: 38px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 3px;
+    border-radius: 4px;
+    border: 2px solid #fff ;
+    letter-spacing:-1px;
+}
+
+
+/* 네번째 섹션 설정 */
+section:nth-child(4) {
+    background-image: url(img/summer_bean_bg.png);
+    background-size: cover;
+    background-position: center bottom;
+    height: 400px;
+    padding: 40px 0;
+}
+.summer_inner {
+    display: flex;
+    justify-content: center;
+}
+.summer_inner .imgBox {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+}
+.summer_inner .txtBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #7e5732;
+}
+.summer_inner .txtBox h4 {
+    letter-spacing: -2px;
+    font-size: 18px;
+}
+.summer_inner .txtBox h2 {
+    letter-spacing: -1px;
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+.summer_inner .txtBox p {
+    letter-spacing: -2px;
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+.summer_inner .txtBox span {}
+.summer_inner .txtBox span a {
+    color: #7e5732;
+    display: inline-block;
+    padding: 8px 20px;
+    border: 1px solid #7e5732;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: all 0.5s;
+}
+.summer_inner .txtBox span a:hover {
+    background-color: #7e5732;
+    color: #fff;
+    text-decoration: underline;
+    
+}
+
+
+
+/* 다섯번째 섹션 */
+section:nth-child(5) {
+    background-image: url(img/bali_bg.png);
+    background-size: cover;
+    background-position: center bottom;
+    height: 300px;
+    padding: 40px 0;
+}
+.reserve_inner {
+    display: flex;
+    justify-content: flex-end;
+}
+.reserve_inner .txtBox {
+    
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.reserve_inner .imgBox {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+}
+.reserve_inner .txtBox span {
+    margin-top: 20px;
+}
+.reserve_inner .txtBox span a {
+    color: #B87643;
+    display: inline-block;
+    padding: 8px 20px;
+    border: 1px solid #B87643;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: all 0.5s;
+}
+.reserve_inner .txtBox span a:hover {
+    background-color: #B87643;
+    color: #fff;
+    text-decoration: underline;
+    
+}
+
+
+
+/* 여섯번째 섹션 */
+section:nth-child(6) {
+    background-image: url(img/2024_summer_pick_bg.jpg);
+    background-size: cover;
+    background-position: center center;
+    height: 600px;
+    padding: 40px 0;
+    background-attachment: fixed;
+}
 
 
 
 /* 미디어쿼리구간설정############################################### */
 
 /* 와이드데스크탑 설정 */
-
 /* 1280px 이상일때설정 */
 @media(min-width:1280px){
-
-
-    .header_inner , .reward_inner{width: 1240px;
-                    margin: 0 auto;}
-
-    .notice_inner {width: 620px;
-               
+    .header_inner , .reward_inner, .summer_inner, .reserve_inner, .pickup_inner{
+        width: 1240px;
+        margin: 0 auto;
     }
-    .promo_inner{width: 620px;}
+    .notice_inner {
+        width: 620px;          
+    }
+    .promo_inner{
+        width: 620px;
+    }
 
 }
