--- a/project_002/style.css
+++ b/project_002/style.css
@@ -22,7 +22,8 @@ a {
 ul,ol {list-style: none;}
 img {vertical-align: bottom;}
 
-body {font-family: "Pretendard Variable", "Pretendard", "-apple-system", "BlinkMacSystemFont", system-ui, "Roboto", "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;}
+body {font-family: "Pretendard Variable", "Pretendard", "-apple-system", "BlinkMacSystemFont", system-ui, "Roboto", "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+}
 
 
 
@@ -117,7 +118,20 @@ header {
 }
 
 
+/* 스크롤바 설정 */
+::-webkit-scrollbar {
+    width: 15px; /* 스크롤 막대의 너비 */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #FFBC0E; /* 스크롤 막대 색상 */
+    border-radius: 10px;
 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #323232; /* 스크롤 막대 호버 시 색상 */
+  }
 
 
 /* 첫번째 섹션 설정################################ */
@@ -131,20 +145,48 @@ section:nth-child(1) {
 }
 .txt {
     position: absolute;
-    left: 17%;
-    top: 32%;
-    
+    left: 15%;
+    top: 30%;
+    width: 100%;
+    /* animation: hero 1s ease-in;
+    animation-fill-mode: forwards; */
+    /* overflow:hidden ; */
 }
-section:nth-child(1) .txt img {
+
+/* section:nth-child(1) .txt img {
     width: 650px;
+} */
+.txt p {
+    font-size: 100px;
+    font-family: 'ChunkFive', sans-serif;
+    color: #fff;
+    letter-spacing: 5px;
+    opacity: 0;
+    animation: fadeIn 2s ease forwards;
+}
+.txt p:nth-child(1) {
+    animation-delay: 0.3s;
 }
 
+.txt p:nth-child(2) {
+    animation-delay: 0.7s;
+}
 
+.txt p:nth-child(3) {
+    animation-delay: 1.1s;
+}
 
+@keyframes fadeIn {
+    to {
+     
+        opacity: 1;
+    }
+
+}
 
 /* 두번째 섹션 설정####################################### */
 section:nth-child(2) {
-    height: 3200px;
+    height: 2800px;
     margin-top: 100px;
 }
 
@@ -154,12 +196,7 @@ section:nth-child(2) {
 
 
 .history_title {opacity: 0;}
-.history_title.on {
-    
-    overflow: hidden;
-   
-     animation: title 1s cubic-bezier(0.77, 0, 0.175, 1) forwards;
-}
+
 .history_title h1 {
     display: flex;
     flex-direction: column;
@@ -168,6 +205,11 @@ section:nth-child(2) {
     font-family: 'ChunkFive', sans-serif;
     font-weight: normal;
    
+}
+.history_title.is-Visible {
+    overflow: hidden;
+    animation: title 1s ease;
+    animation-fill-mode: forwards;
 }
 @keyframes title {
     0% {
@@ -192,12 +234,11 @@ section:nth-child(2) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 30px;
 }
 .history_sub img {
     width: 280px;
     height: auto;
-    margin: 100px 0px 20px 0px;
+    margin: 60px 0px 20px 0px;
 }
 .history_sub p {
     font-size: 16px;
@@ -210,27 +251,53 @@ section:nth-child(2) {
 
 .history_wrap {
     position: relative;
-    height: 2300px;
+    height: 1700px;
     overflow: hidden;
     margin-top: 100px;
 }
 .history_wrap .center {
     position: absolute;
     width: 2px;
-    height: 92%;
+    height: 97%;
     background-color: #323232;
     top: 0;
     left: 50%;
     margin-left: -1px;
 }
-
+.history_wrap .center>div {
+    background-color: #323232;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    margin-left: -5px;
+    top: 55px;
+}
+.history_wrap .center>div:nth-child(2) {
+    top: 20%;
+    margin-top: 40px;
+}
+.history_wrap .center>div:nth-child(3) {
+    top: 40%;
+}
+.history_wrap .center>div:nth-child(4) {
+    top: 60%;
+    margin-top: -20px;
+}
+.history_wrap .center>div:nth-child(5) {
+    top: 75%;
+    margin-top: 25px;
+}
+.history_wrap .center>div:nth-child(6) {
+    top: 100%;
+}
 .history_wrap .le_img {
     z-index: -1;
     position: absolute;
     left: 15%;
     top: 0;
     height: 400px;
-   
 }
 .history_wrap .ri_img {
     z-index: -1;
@@ -238,7 +305,7 @@ section:nth-child(2) {
     right: 15%;
     top: 0;
     height: 400px;
-    
+    animation-delay: 0.5s;
 }
 .left1 {
     width: 50%;
@@ -255,7 +322,7 @@ section:nth-child(2) {
     height: 500px;
     position: absolute;
     padding-left: 60px;
-    top: 400px;
+    top: 300px;
     right: -100%;
     transition: all 1.2s;
 }
@@ -266,7 +333,7 @@ section:nth-child(2) {
     position: absolute;
     padding-right: 60px;
     left: -100%;
-    top: 800px;
+    top: 600px;
     transition: all 1.2s;
 }
 .right2 {
@@ -274,7 +341,7 @@ section:nth-child(2) {
     height: 500px;
     position: absolute;
     padding-left: 60px;
-    top: 1200px;
+    top: 900px;
     right: -100%;
     transition: all 1.2s;
 }
@@ -285,7 +352,7 @@ section:nth-child(2) {
     position: absolute;
     padding-right: 60px;
     left: -100%;
-    top: 1600px;
+    top: 1200px;
     transition: all 1.2s;
 }
 .history_wrap h2 {
@@ -306,17 +373,66 @@ section:nth-child(2) {
     font-size: 16px;
     font-weight: bold;
 }
+.left1.is-Visible {
+   
+    animation: history_l 1s ease-out;
+    animation-fill-mode: forwards;
+}
+.left2.is-Visible {
+   
+    animation: history_l 1s ease-out;
+    animation-fill-mode: forwards;
+}
+.left3.is-Visible {
+   
+    animation: history_l 1s ease-out;
+    animation-fill-mode: forwards;
+}
+.right1.is-Visible {
+   
+    animation: history_r 1s ease-out;
+    animation-fill-mode: forwards;
+}
+.right2.is-Visible {
+   
+    animation: history_r 1s ease-out;
+    animation-fill-mode: forwards;
+}
+@keyframes history_l {
+    0% {
+      left: -100%;
+      opacity: 0;
+    }
+    100% {
+      left: 0;
+      opacity: 1;
+    }
+  }
+@keyframes history_r {
+    0% {
+      right: -100%;
+      opacity: 0;
+    }
+    100% {
+      right: 0;
+      opacity: 1;
+    }
+  }
 
 .history_end {
     opacity: 0;
-}
-.history_end.on {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -80px;
-    animation: end 1s cubic-bezier(0.77, 0, 0.175, 1) forwards;
+    /* margin-top: -80px; */
+    height: 400px;
+
+}
+.history_end.is-Visible {
+   
+    animation: end 2s ease;
+    animation-fill-mode: forwards;
 }
 
 @keyframes end {
@@ -332,18 +448,20 @@ section:nth-child(2) {
 .history_end img {
     width: 500px;
     height: auto;
+    /* animation-delay: 0.5s; */
 }
 .history_end span {
     font-size: 120px;
     font-family: 'ChunkFive Print', serif;
     color: #FFBC0E;
     margin: 20px;
+    /* animation-delay: 1s; */
 }
 .history_end p {
     font-size: 20px;
     font-weight: 600;
     text-align: center;
-
+    /* animation-delay: 1.5s; */
 }
 
 
@@ -358,9 +476,11 @@ section:nth-child(3) {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    position: relative;
 }
 .product {
     height: 100%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -370,20 +490,40 @@ section:nth-child(3) {
 .product h2 {
     color: #fff;
     font-size: 35px;
-    text-align: center;
     letter-spacing: 5px;
     font-weight: normal;
     font-family: 'ChunkFive';
-    
+    opacity: 0;
+    position: absolute;
+    top: 30px;
+
+}
+.product h2.is-Visible {
+
+    animation: flavour 0.8s ease;
+    animation-fill-mode: forwards;
 }
 
+.product button {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+}
 .product ul {
     display: flex;
-    margin-top: 30px;
-    /* background-color: red; */
+    width: 100%;
+    height: 600px;
+    transition: all 0.8s;
+    position: absolute;
+    left: 0px;
+    top: 20%;
+    margin-left: -200px;
+
 }
 .product li {
-    margin: 0px 40px;
+    margin: 0px 70px;
+    width: 320px;
 }
 .product a {
     display: flex;
@@ -393,7 +533,7 @@ section:nth-child(3) {
 }
 .product li a img {
     width: 320px;
-    margin: 30px;
+    height: auto;
 }
 .product li span {
     color: #FFBC0E;
@@ -403,18 +543,35 @@ section:nth-child(3) {
     font-size: 25px;
     font-weight: 600;
 }
+.product li .price {
+    margin-top: 5px;
+}
+.product li .price span {
+    color: #323232;
+}
 .product .pro_icon {
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    margin-top: 10px;
+}
+.product .pro_icon i {
+    color: #fff;
+    font-size: 25px;
+    margin-right: 5px;
+}
+.pro_icon i.on{
+    color: red;
 }
 .product .pro_icon img {
     width: 30px;
-    margin: 15px 5px;
+    margin-left: 5px;
 }
 .product .pro_icon img:hover {
+    animation: hoverJump 0.2s ease;
+}
+.product .pro_icon i:hover {
     animation: hoverJump 0.2s ease;
 }
 
@@ -430,8 +587,9 @@ section:nth-child(3) {
     }
 }
 
+
 /* 검색창################################ */
-.product .search {
+.search {
     width: 600px;
     height: 70px;
     background-color: #fff;
@@ -439,12 +597,12 @@ section:nth-child(3) {
     border-bottom-left-radius: 40px;
     border-top-right-radius: 40px;
     border-top-left-radius: 40px;
+    position: absolute;
+    top: 85%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    justify-content: center;
     box-shadow: -3px 3px 10px gray;
-    
 }
 .product .search .inner_box {
     width: 570px;
@@ -468,6 +626,7 @@ section:nth-child(3) {
     justify-content: center;
     align-items: center;
     box-shadow: -3px 3px 10px gray;
+    cursor: pointer;
 }
 .product .search .sc_btn em {
     color: #fff;
@@ -503,8 +662,10 @@ section:nth-child(4) {
     font-size: 100px;
     overflow: hidden;
     width: 100%;
+ 
    
 }
+
 .marquee1 {
     position: absolute;
     top: 80px;
@@ -529,6 +690,7 @@ section:nth-child(4) {
     /* right: 0; */
     animation: flowText2-1 20s linear infinite;
 }
+
 
 @keyframes flowText1 {
     0% {left: 0;}
@@ -604,12 +766,32 @@ section:nth-child(5) {
 }
 .flavour_inner h2 {
     color: #323232;
-    font-size: 35px;
-    text-align: center;
+    font-size: 45px;
     margin-top: 30px;
     font-weight: normal;
     font-family: 'ChunkFive';
+    position: absolute;
+    left: 32%;
+    top: 0;
+    opacity: 0;
+    transition: all 0.5s;
 }
+.flavour_inner h2.is-Visible {
+
+    animation: flavour 0.8s ease;
+    animation-fill-mode: forwards;
+}
+@keyframes flavour {
+    0% {
+        transform: translateY(0);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(15px);
+        opacity: 1;
+    }
+}
+
 .flavour_inner .iceCream {
     display: flex;
     flex-wrap: wrap;
@@ -617,10 +799,10 @@ section:nth-child(5) {
     align-items: center;
     margin-top: 50px;
     position: absolute;
-    top: 0;
+    top: 60px;
     cursor: pointer;
     z-index: 10;
-    
+
 }
  .flavour_inner .iceCream li {
     margin-top: 100px;
@@ -754,22 +936,12 @@ footer p:nth-child(2) {
  
 
 
-/* 숨기기 구간!!!!!!!!!!!!!!!!############################ */
-
-
-.main {
-    /* display: none; */
-}
-.logIn {
-    display: none;
-}
-.detail_page {
-    display: none;
-}
-
 
 /* 로그인페이지############################################ */
 
+.log_wrap {
+    position: relative;
+}
 .logIn {
     background-image: url(img/cloud_login.jpg);
     width: 100%;
@@ -782,7 +954,7 @@ footer p:nth-child(2) {
 }
 .log_box {
     width: 500px;
-    height: 450px;
+    height: 550px;
     background-color: #fff;
     position: absolute;
     top: 20%;
@@ -832,7 +1004,6 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 
 }
 .btn_area button {
@@ -840,8 +1011,8 @@ form {
     height: 40px;
     background-color:#FFBC0E;
     color: #fff;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 17px;
+    font-weight: 700;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -854,6 +1025,23 @@ form {
 .log_box .caption a {
     margin: 0 50px;
     font-size: 15px;
+    color: #a4a4a4;
+}
+/* .naver_wrap {
+    border-top: 1px solid #ccc;
+    margin-top: 20px;
+    width: 100%;
+    height: 70px;
+    background-color: red;
+} */
+.naver_wrap {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    /* height: 80px;
+    width: 70%; */
+    /* background-color: red; */
+
 }
 
 
@@ -899,9 +1087,9 @@ form {
     position: absolute;
     left: 0;
     top: 0;
+    display: none;
 }
-.big_img li:nth-child(2) {opacity: 0;}
-.big_img li:nth-child(3) {opacity: 0;}
+.big_img li:nth-child(1) {display: block;}
 .big_img li img {
     width: 100%;
     height: 100%;
@@ -918,6 +1106,7 @@ form {
 }
 .small_img li {
     border: 1px solid #a4a4a4;
+    cursor: pointer;
 }
 .small_img li img {
     width: 90px;
@@ -935,6 +1124,8 @@ form {
 }
 .pro_sub .pro_sub_inner {
     margin: 50px;
+    width: 400px;
+
 }
 .pro_sub strong {
     font-size: 20px;
@@ -952,27 +1143,51 @@ form {
 .pro_sub .sub_box1 {
     margin-top: 30px;
     height: 180px;
-    cursor: pointer;
 }
 .pro_sub h4 {
     font-size: 20px;
     font-weight: normal;
     margin-bottom: 15px;
 }
-.pro_sub ul {
+.sub_box1 .sub_box1Img {
     display: flex;
 }
-.pro_sub li {
-    display: flex;
-    flex-direction: column;
-    margin-right: 15px;
+.sub_box1Img>div {
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
 }
-.pro_sub li img {}
-.pro_sub li em {
+.sub_box1Img>div:nth-child(1) {
+
+    background-image: url(img/choice_1.png);
+    background-repeat: no-repeat;
+}
+.sub_box1Img>div:nth-child(2) {
+    background-image: url(img/choice_2.png);
+    background-repeat: no-repeat;
+}
+.sub_box1Btn {
+    display: flex;
+    width: 200px;
+}
+.sub_box1Btn .size {
     border: 1px solid #a4a4a4;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 10px;
     font-style: normal;
+    cursor: pointer;
+    width: 70px;
+    height: 40px;
+    margin-left: 6px;
+}
+.sub_box1Btn .size:nth-child(2) {
+    margin-left: 20px;
+}
+.sub_box1Btn em:hover {
+    background-color: #C4E7F3;
+}
+.size.on {
+    background-color: #C4E7F3;
 }
 
 /* 서브박스2 설정 */
@@ -981,10 +1196,11 @@ form {
     margin-top: 20px;
     padding-top: 20px;
     height: 300px;
+    
 }
 .sub_box2 h4 {}
 .sub_box2 select {
-    width: 90%;
+    width: 100%;
     height: 30px;
 }
 
@@ -1036,7 +1252,44 @@ form {
 
 
 
-/* 추천제품 설정 */
+/* 선택창 설정##################################### */
+.sub_box2_list {
+    margin-top: 20px;
+    width: 100%;
+    height: 60px;
+    background-color: #ebebeb;
+    position: relative;
+    display: none;
+}
+.sub_box2_list>div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+}
+.sub_box2_list>div p {}
+.sub_box2_list>div em {
+    font-style: normal;
+    font-size: 14px;
+    margin-top: 5px;
+}
+.sub_box2_list span {
+    position: absolute;
+    top: 0;
+    padding: 7px;
+    right: 5px;
+    cursor: pointer;
+}
+.sub_box2_list span i {
+    font-size: 16px;
+}
+
+
+
+
+
+/* 추천제품 설정################################## */
 
 .recommend {
     height: 500px;
@@ -1088,13 +1341,13 @@ display: none;
 z-index: 998;
 }
 .popUp .popUp_inner {
-    width: 35%;
+    width: 30%;
     height: calc(100vh - 83px);
     background-color: #fff;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     position: absolute;
-    right: -35%;
+    right: -30%;
     top: 0;
     transition: all 1.2s;
     opacity: 0;
@@ -1138,7 +1391,8 @@ right: 0;}
     height: 630px;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    position: relative;
 }
 .popUp_pd p {
     font-size: 20px;
@@ -1149,8 +1403,8 @@ right: 0;}
     width: 100%;
 
 }
-.popUp_inner .popUp_btn li {
-    font-size: 18px;
+.popUp_inner .popUp_btn button {
+    font-family: "Pretendard Variable", "Pretendard", "-apple-system", "BlinkMacSystemFont", system-ui, "Roboto", "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     height: 60px;
     width: 220px;
     background-color: #d9d9d9;
@@ -1160,13 +1414,88 @@ right: 0;}
     align-items: center;
     margin: 20px;
     cursor: pointer;
+    font-size: 18px;
+    border: none;
 }
-.popUp_inner .popUp_btn li:nth-child(1) {
+.popUp_inner .popUp_btn a {
+    font-size: 18px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+.popUp_inner .popUp_btn .order a {
     background-color: #FFBC0E;
     color: #fff;
 }
 
-
+/* 장바구니 내부 설정 */
+.popUp_list {
+    overflow-Y: scroll;
+    width: 90%;
+    height: 80%;
+    display: none;
+    position: absolute;
+    top: 30px;
+    border: 1px solid #a4a4a4;
+}
+.popUp_list img {
+    width: 57px;
+    height: 70px;
+}
+.popUp_list strong {
+    font-size: 20px;
+}
+.popUp_list>div {
+    width: 100%;
+    height: 80px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+.popUp_list>div>div:nth-child(1) {
+    position: absolute;
+    left: 8%;
+}
+.popUp_list>div>div:nth-child(2) {
+    position: absolute;
+    left: 25%;
+}
+.popUp_list>div>div:nth-child(3) {
+    position: absolute;
+    right: 12%;
+}
+.popUp_list span {
+    margin-left: 3px;
+}
+.popUp_contents .total {
+    /* background-color: red; */
+    width: 70%;
+    height: 50px;
+    position: absolute;
+    bottom: 15%;
+    font-weight: bold;
+}
+.popUp_contents .total p {
+    font-size: 20px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.popUp_contents .total strong {
+    
+}
+.popUp_contents .total strong em {
+    font-style: normal;
+    margin-right: 10px; 
+}
 
 
 /* 미디어쿼리 구간############################################ */
